--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .App {
   text-align: center;
 }
@@ -37,7 +41,201 @@
   }
 }
 
+.gradient_background {
+  background: linear-gradient(180deg, #9a3b95, #e36d83);
+}
 
-.gradient_background{
-  background: linear-gradient(180deg, #9A3B95, #E36D83);
+.box {
+  height: 308px;
+  width: 276px;
+}
+
+.box .group {
+  height: 308px;
+  left: 0;
+  /* position: fixed; */
+  top: 0;
+  width: 280px;
+}
+
+.box .overlap-group {
+  background-color: #faf4f4;
+  /* background-image: url(./influencer-marketing-scaled-1.png); */
+  background-position: 50% 50%;
+  background-size: cover;
+  border: 1px solid;
+  border-color: #242225;
+  border-radius: 13px;
+  height: 308px;
+  left: -1px;
+  position: relative;
+  top: -1px;
+  width: 276px;
+}
+
+.box .rectangle {
+  background-color: #faf4f4;
+  border: 1px solid;
+  border-color: #242225;
+  border-radius: 13px;
+  height: 308px;
+  left: -1px;
+  position: absolute;
+  top: -1px;
+  width: 276px;
+}
+
+.box .influencer-marketing {
+  height: 308px;
+  left: -1px;
+  object-fit: cover;
+  position: absolute;
+  top: -1px;
+  width: 276px;
+}
+
+.box .text-wrapper {
+  color: #ffffff;
+  font-family: "Inter-Bold", Helvetica;
+  font-size: 15px;
+  font-weight: 700;
+  left: 12px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 259px;
+  white-space: nowrap;
+}
+
+.box .div {
+  background: linear-gradient(
+    180deg,
+    rgb(163, 65, 147) 0%,
+    rgb(222, 106, 132) 100%
+  );
+  border-radius: 14px;
+  height: 14px;
+  left: 12px;
+  position: absolute;
+  top: 277px;
+  width: 79px;
+}
+
+.box .text-wrapper-2 {
+  color: #ffffff;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 10px;
+  font-weight: 400;
+  left: 5px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 277px;
+  white-space: nowrap;
+  width: 70px;
+}
+
+/* category btn */
+.category-btn {
+  background-color: #9a3b95 !important;
+  color: white;
+}
+
+/* card design */
+
+.card {
+  border: none;
+  transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+  overflow: hidden;
+  border-radius: 20px;
+  min-height: 450px;
+  box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
+
+  @media (max-width: 768px) {
+    min-height: 350px;
+  }
+
+  @media (max-width: 420px) {
+    min-height: 300px;
+  }
+
+  &.card-has-bg {
+    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+    background-size: 120%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    &:before {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background: inherit;
+      /* -webkit-filter: grayscale(1);
+      -moz-filter: grayscale(100%);
+      -ms-filter: grayscale(100%);
+      -o-filter: grayscale(100%);
+      filter: grayscale(100%); */
+    }
+
+    &:hover {
+      transform: scale(0.98);
+      box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.3);
+      background-size: 130%;
+      transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+
+      .card-img-overlay {
+        transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+        background: rgb(255, 186, 33);
+        background: linear-gradient(
+          0deg,
+          rgb(0, 0, 0) 0%,
+          rgba(0, 0, 0, 0) 100%
+        );
+      }
+    }
+  }
+  .card-footer {
+    background: none;
+    border-top: none;
+    .media {
+      img {
+        border: solid 3px rgba(255, 255, 255, 0.3);
+      }
+    }
+  }
+  .card-title {
+    font-weight: 800;
+  }
+  .card-meta {
+    color: rgba(0, 0, 0, 0.3);
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 2px;
+  }
+  .card-body {
+    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+  &:hover {
+    .card-body {
+      margin-top: 30px;
+      transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+    }
+    cursor: pointer;
+    transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+  .card-img-overlay {
+    transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+    background: rgb(255, 186, 33);
+    background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.38) 0%,
+      rgba(255, 255, 255, 0) 100%
+    );
+  }
+}
+@media (max-width: 767px) {
 }
