--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+
 .App {
   text-align: center;
 }
@@ -163,7 +168,7 @@
 
   &.card-has-bg {
     transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-    background-size: 120%;
+    background-size: 125%;
     background-repeat: no-repeat;
     background-position: center center;
     &:before {
