--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -4,7 +4,7 @@
   }
 
 body {
-  background-color: #28282B;
+  background-color: #FAF9F6;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -368,20 +368,26 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .list-group-item {
-  background-color: #0000;
+  background-color: #0000 !important;
   color: white !important;
 }
 
 .group-item {
   color: rgb(183, 183, 183);
+  text-decoration: none;
 }
 .group-item:hover {
   color: rgb(12, 235, 255);
 }
 
 .footer {
-  border-top: 2px solid #8a2dfc;
+  /* border-top: 2px solid #8a2dfc; */
+  /* margin-top: auto; */
+  position: relative;
+  left: 0;
+  bottom: 0;
 }
+
 
 .bottom-footer {
   background-color: #8a2dfc;
@@ -426,11 +432,11 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .section-heading {
-  color: #ffffff;
+  color: #000000;
 }
 
 .section-featured {
-  color: #60fcea;
+  color: #9B3C95;
 }
 
 /* search bar */
@@ -446,8 +452,8 @@ h1,h2,h3,h4,h5,h6 {
   vertical-align: middle;
 }
 
-input,
-button {
+.search-input,
+.search-button {
   color: #fff;
   font-family: Nunito;
   padding: 0;
@@ -470,18 +476,18 @@ button {
   transform: scale(0.4);
 }
 
-form {
+.search-form {
   height: 96px;
 }
 
-input[type="text"] {
+.search-input[type="text"] {
   width: 100%;
   height: 96px;
   font-size: 60px;
   line-height: 1;
 }
 
-input[type="text"]::placeholder {
+.search-input[type="text"]::placeholder {
   color: #ffffff;
 }
 
@@ -490,7 +496,7 @@ input[type="text"]::placeholder {
   padding-left: 35px;
 }
 
-button {
+.search-button {
   position: relative;
   display: block;
   width: 84px;
@@ -512,7 +518,7 @@ button {
   transition: 0.5s ease all;
 }
 
-button span {
+.search-button span {
   position: absolute;
   top: 68px;
   left: 43px;
@@ -525,8 +531,8 @@ button span {
   transition: 0.5s ease all;
 }
 
-button span:before,
-button span:after {
+.search-button span:before,
+.search-button span:after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -570,4 +576,55 @@ button span:after {
   right: -6px;
   width: 40px;
   background-color: #fff;
+}
+
+/* btn css */
+
+/* CSS */
+.button-87 {
+  margin: 10px;
+  padding: 15px 30px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #f09819;
+  background-image: linear-gradient(45deg, #FF512F 0%, #F09819  51%, #FF512F  100%);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 50%;
+}
+
+.button-87:hover {
+  background-position: right center;
+  /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+.button-87:active {
+  transform: scale(0.95);
+}
+
+
+.celeb-img {
+  /* height: 550px; */
+  /* width: 450px; */
+  border-radius: 15px;
+}
+
+.breadcrumb {
+  --bs-breadcrumb-divider: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E");
+}
+
+
+.tags {
+  background-color: red;
 }
