--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -7,7 +7,7 @@
 
 
 body, html {
-  background-color: #faf9f6;
+  background-color: #28282B;
   min-height: 100vh;
 }
 
@@ -168,7 +168,7 @@ h6 {
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   overflow: hidden;
   border-radius: 20px;
-  min-height: 450px;
+  min-height: 300px;
   box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
 
   @media (max-width: 768px) {
@@ -462,7 +462,7 @@ h6 {
 }
 
 .section-heading {
-  color: #000000;
+  color: white;
 }
 
 .section-featured {
