update UI for sign up page

--- a/marbiz-frontend/src/Page/CreatorAuth/style.css
+++ b/marbiz-frontend/src/Page/CreatorAuth/style.css
@@ -1,5 +1,6 @@
 .username-holder {
   display: flex;
+  color: white;
   background-color: white;
   justify-content: space-between;
   width: 60%;
@@ -7,7 +8,7 @@
   box-shadow: var(--mediumBoxShadow);
   padding: 5px 10px;
   transition-duration: 0.3s;
-  border: 1px solid #6f20be;
+  border: 2px solid #6f20be;
   align-items: baseline;
   margin: 0 auto;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
@@ -29,7 +30,12 @@
 }
 .username-text {
   border: none;
-  padding: 5px;
+  padding: 5px 15px;
+  background-color: #332D2D;
+  border-radius: 20px;
+}
+.username-text:focus {
+  background-color: black;
 }
 .gtext {
   font-size: 35px;
