--- a/marbiz-frontend/src/Page/CreatorAuth/style.css
+++ b/marbiz-frontend/src/Page/CreatorAuth/style.css
@@ -28,11 +28,15 @@
   border-radius: 20px;
   cursor: pointer;
 }
+
+.username-domain {
+  padding: 5px 0px;
+}
 .username-text {
   border: none;
-  padding: 5px 15px;
+  padding: 5px 5px;
   background-color: #332D2D;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 .username-text:focus {
   background-color: black;
