--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -742,7 +742,10 @@ h6 {
 /* Dark background */
 .dark-bg {
   background-color: #111;
-  border: 2px solid #6f42c1; /* Purple border */
+  border-top: 2px solid #6f42c1; /* Purple border */
+  border-bottom: 2px solid #6f42c1; /* Purple border */
+  border-left: 0px solid #6f42c1; /* Purple border */
+  border-right: 0px solid #6f42c1; /* Purple border */
   color: #fff; /* White text color */
   border-radius: 10px;
 }
@@ -756,7 +759,8 @@ h6 {
 .dark-bg:focus {
   border-color: #6f42c1; /* Purple border on focus */
   color: #fff; /* White text color on focus */
-  background-color: #242225;
+  background-color: rgb(29, 29, 29);
+  box-shadow: inset 0 0 0 0px #6f42c1;
 }
 
 .form-switch .form-check-input {
@@ -769,4 +773,10 @@ h6 {
 
 .form-check-input[type="checkbox"]:checked {
   background-color: green !important;
+}
+
+
+.inquiry-form {
+  background-color: 	#28282B;
+  border: 2px solid #6f42c1
 }
