--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -408,7 +408,7 @@ h6 {
 }
 
 .navbar {
-  border-bottom: 2px solid rgb(168, 85, 247);
+  border-bottom: 2px solid #8A2DFC;
 }
 
 /* btn Ui */
@@ -741,8 +741,9 @@ h6 {
 
 /* Dark background */
 .dark-bg {
-  background-color: #111;
-  border-top: 2px solid #6f42c1; /* Purple border */
+  background-color: #292929;
+  padding: 10px 15px;
+  border-top: 0px solid #6f42c1; /* Purple border */
   border-bottom: 2px solid #6f42c1; /* Purple border */
   border-left: 0px solid #6f42c1; /* Purple border */
   border-right: 0px solid #6f42c1; /* Purple border */
@@ -773,10 +774,90 @@ h6 {
 
 .form-check-input[type="checkbox"]:checked {
   background-color: green !important;
+  border: green;
+  padding: 2px;
 }
 
 
 .inquiry-form {
   background-color: 	#28282B;
   border: 2px solid #6f42c1
+}
+
+.css-13cymwt-control {
+  background-color: #292929 !important;
+  padding: 5px 15px !important;
+
+  border-top: 0px solid #6f42c1  !important;
+  border-bottom: 2px solid #6f42c1 !important;
+  border-left: 0px solid #6f42c1 !important;
+  border-right: 0px solid #6f42c1 !important;
+  color: #fff !important;
+  border-radius: 10px !important;
+}
+.css-t3ipsp-control {
+  
+  padding: 5px 15px !important;
+  background-color: #292929 !important;
+  border-top: 0px solid #6f42c1  !important;
+  border-bottom: 2px solid #6f42c1 !important;
+  border-left: 0px solid #6f42c1 !important;
+  border-right: 0px solid #6f42c1 !important;
+  color: #fff !important;
+  border-radius: 10px !important;
+  box-shadow: 0 0 0 0px !important;
+}
+
+.css-166bipr-Input {
+  color: white !important;
+}
+
+.selectmenu .css-1nmdiq5-menu {
+  background-color: black;
+}
+
+/* Default styles */
+#file-upload[type="file"] {
+  display: none;
+}
+
+.custom-file-upload {
+  border: 2px dashed gray;
+  width: 100%; /* Adjust the width as needed for responsiveness */
+  min-height: 100px; /* Set a minimum height for the container */
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: border-color 0.3s, color 0.3s;
+}
+
+.custom-file-upload:hover {
+  border: 2px dashed rgb(240, 240, 240);
+  color: white;
+}
+
+/* Styles for the image preview */
+.img-preview {
+  max-width: 100%;
+  height: 400px;
+  /* border: 2px solid #6f42c1;  */
+  border-radius: 10px;
+  margin-top: 10px;
+  display: block;
+  
+}
+
+/* Responsive styles */
+@media screen and (max-width: 768px) {
+  .custom-file-upload {
+    width: 80%; /* Adjust the width for smaller screens */
+  }
+}
+
+.upload-img-section {
+  border: 2px solid #8A2DFC; /* Purple border */
+
 }
