--- a/marbiz-frontend/src/Page/CreatorAuth/style.css
+++ b/marbiz-frontend/src/Page/CreatorAuth/style.css
@@ -43,7 +43,13 @@
 }
 .gtext {
   font-size: 35px;
-  background: -webkit-linear-gradient(#9a3b95, #e36d83);
+  /* background: -webkit-linear-gradient(#fe62ac 0%, #8726ff 51%); */
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(
+    45deg,
+    #fe62ac 0%,
+    #8726ff 51%,
+    #fe5ab0 100%
+  );
 }
