--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -140,6 +140,10 @@ h6 {
   width: 79px;
 }
 
+.xyb {
+  background: linear-gradient(315deg, #8725fe, #FE66AB)
+}
+
 .box .text-wrapper-2 {
   color: #ffffff;
   font-family: "Inter-Regular", Helvetica;
@@ -182,6 +186,7 @@ h6 {
   &.card-has-bg {
     transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
     background-size: 125%;
+    
     background-repeat: no-repeat;
     background-position: center center;
     &:before {
@@ -204,14 +209,16 @@ h6 {
       box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.3);
       background-size: 130%;
       transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-
+      transform: translateY(-20px);
+      z-index: 99;
       .card-img-overlay {
         transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-        background: rgb(255, 186, 33);
+        /* background: rgb(255, 186, 33); */
         background: linear-gradient(
           0deg,
-          rgb(0, 0, 0) 0%,
-          rgba(0, 0, 0, 0) 100%
+          #000000 0%,
+          #c800ff4b 25%,
+          #8725fe00 100%
         );
       }
     }
@@ -455,6 +462,7 @@ h6 {
 .section-heading {
   color: white;
 }
+
 
 .section-featured {
   color: #9b3c95;
@@ -860,4 +868,13 @@ h6 {
 .upload-img-section {
   border: 2px solid #8A2DFC; /* Purple border */
 
+}
+
+.carousel .slider-wrapper {
+  padding: 20px 20px !important;
+}
+
+.card .card-img:hover {
+  transform: scale(1.07);
+  
 }
