--- a/marbiz-frontend/src/Page/CreatorAuth/style.css
+++ b/marbiz-frontend/src/Page/CreatorAuth/style.css
@@ -31,7 +31,7 @@
 .username-text {
   border: none;
   padding: 5px 15px;
-  background-color: #332D2D;
+  background-color: #332d2d;
   border-radius: 20px;
 }
 .username-text:focus {
