--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -3,6 +3,7 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
+  
 }
 
 body,
@@ -381,6 +382,10 @@ h6 {
   font-size: 18px;
   font-weight: 500;
   font-weight: 600;
+}
+.nav-link:hover {
+  color: #f25cb4;
+  
 }
 
 .promotion-card {
@@ -892,4 +897,13 @@ h6 {
 .card .card-img:hover {
   transform: scale(1.07);
   
+}
+
+.dashboard-nav{
+  border-bottom: 2px solid #8A2DFC;
+  background-color: #28282B;
+}
+
+.nav-link:focus, .nav-link:hover {
+  color: #FD66AB;
 }
