--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -186,7 +186,6 @@ a {
 }
 
 /* card design */
-
 .card {
   border: none;
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
@@ -203,75 +202,29 @@ a {
     min-height: 450px;
   }
 
-  &.card-has-bg {
-    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-    background-size: 125%;
-
-    background-repeat: no-repeat;
-    background-position: center center;
-    &:before {
-      content: "";
-      position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background: inherit;
-      /* -webkit-filter: grayscale(1);
-      -moz-filter: grayscale(100%);
-      -ms-filter: grayscale(100%);
-      -o-filter: grayscale(100%);
-      filter: grayscale(100%); */
-    }
-
-    &:hover {
-      transform: scale(0.98);
-      box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.3);
-      background-size: 130%;
-      transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-      transform: translateY(-20px);
-      z-index: 99;
-      .card-img-overlay {
-        transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-        /* background: rgb(255, 186, 33); */
-        background: linear-gradient(
-          0deg,
-          #000000 0%,
-          #fc3c6d4f 25%,
-          #8725fe00 100%
-        );
-      }
-    }
-  }
-  .card-footer {
-    background: none;
-    border-top: none;
-  }
-
-  .card-footer .media img {
-    border: solid 3px rgba(255, 255, 255, 0.3);
-  }
-
   .card-title {
     font-weight: 800;
   }
+
   .card-meta {
     color: rgba(0, 0, 0, 0.3);
     text-transform: uppercase;
     font-weight: 500;
     letter-spacing: 2px;
   }
+
   .card-body {
     transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   }
+
   &:hover {
-    /* .card-body {
-      margin-top: 30px;
-      transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-    } */
     cursor: pointer;
-    transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+    transform: scale(0.98);
+    box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.3);
+    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+    transform: translateY(-20px);
   }
+
   .card-img-overlay {
     transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
     background: rgb(255, 186, 33);
@@ -282,8 +235,58 @@ a {
     );
   }
 }
-@media (max-width: 767px) {
+
+.card-has-bg {
+  transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+  background-size: 125%;
+  background-repeat: no-repeat;
+  background-position: center center;
+
+  &:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: inherit;
+    /* Uncomment and adjust filter properties if needed
+    -webkit-filter: grayscale(1);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: grayscale(100%); */
+  }
+
+  &:hover {
+    transform: scale(0.98);
+    box-shadow: 0 0 5px -2px rgba(0, 0, 0, 0.3);
+    background-size: 130%;
+    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+    transform: translateY(-20px);
+    z-index: 99;
+
+    .card-img-overlay {
+      transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+      background: linear-gradient(
+        0deg,
+        #000000 0%,
+        #fc3c6d4f 25%,
+        #8725fe00 100%
+      );
+    }
+  }
 }
+
+.card-footer {
+  background: none;
+  border-top: none;
+}
+
+.card-footer .media img {
+  border: solid 3px rgba(255, 255, 255, 0.3);
+}
+
 
 .nav-btn {
   color: white;
@@ -504,7 +507,7 @@ a {
 .section-heading {
   color: white;
   font-size: 60px;
-  font-weight: 400;
+  font-weight: 500;
   line-height: 73px;
 }
 
@@ -844,6 +847,11 @@ a {
   color: #fff !important;
   border-radius: 10px !important;
 }
+
+.css-13cymwt-control:hover {
+  background-color: #D9D9D929 !important;
+}
+
 .css-t3ipsp-control {
   padding: 5px 15px !important;
   background-color: #000000 !important;
@@ -860,7 +868,7 @@ a {
   color: white !important;
 }
 
-.selectmenu .css-1nmdiq5-menu {
+.select__menu .css-1nmdiq5-menu {
   background-color: black;
 }
 
@@ -1154,4 +1162,8 @@ a {
 .bottom-nav-item.active a {
   color: #ffffff; /* Specify your active link text color here */
   
+}
+
+.css-1dimb5e-singleValue {
+  color: #f5615f !important;
 }
