--- a/marbiz-frontend/src/responsive.css
+++ b/marbiz-frontend/src/responsive.css
@@ -25,6 +25,14 @@
   .desktop-view {
     display: none;
   }
+
+  
+.section-heading {
+  color: white;
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 40px;
+}
 }
 @media only screen and (max-width: 575px) {
 }
