--- a/marbiz-frontend/src/Page/CreatorAuth/style.css
+++ b/marbiz-frontend/src/Page/CreatorAuth/style.css
@@ -1,14 +1,14 @@
 .username-holder {
   display: flex;
   color: white;
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   justify-content: space-between;
   width: 60%;
-  border-radius: 50px;
+  border-radius: 10px;
   box-shadow: var(--mediumBoxShadow);
-  padding: 5px 10px;
+  /* padding: 5px 10px; */
   transition-duration: 0.3s;
-  border: 2px solid #6f20be;
+  border: 2px solid #ffffff;
   align-items: baseline;
   margin: 0 auto;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px,
@@ -30,18 +30,20 @@
 }
 
 .username-domain {
-  padding: 5px 0px;
+  /* padding: 5px 0px; */
 }
 .username-text {
   border: none;
-  padding: 5px 5px;
-  background-color: #332d2d;
+  /* padding: 5px 5px; */
+  background-color: #000000;
   border-radius: 10px;
-  width: 100%;
-  
+  width: 300px;
+  outline: none;
+  box-Shadow: none;
+  color: #f5615f;
 }
 .username-text:focus {
-  background-color: black;
+  /* background-color: black; */
 }
 .gtext {
   font-size: 35px;
@@ -58,3 +60,17 @@
   );
 }
 
+.info-heading {
+  font-size: 26px;
+  color: white;
+  font-weight: 400;
+}
+
+.info-paragraph {
+  font-size: 20px;
+  color: #A0A0A0;
+}
+
+.info-box {
+  background-color: #141414;
+}
