--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -184,15 +184,15 @@ a {
   background-color: #9a3b95 !important;
   color: white;
 }
-
-/* card design */
+/* Base card style */
 .card {
   border: none;
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   overflow: hidden;
   border-radius: 10px;
-  min-height: 300px;
-  box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2);
+  min-height: 400px;
+  /* box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.2); */
+  width: 300px;
 
   @media (max-width: 768px) {
     min-height: 450px;
@@ -227,7 +227,7 @@ a {
 
   .card-img-overlay {
     transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
-    background: rgb(255, 186, 33);
+    /* background: rgb(255, 186, 33); */
     background: linear-gradient(
       0deg,
       rgba(0, 0, 0, 0.8) 0%,
@@ -235,6 +235,7 @@ a {
     );
   }
 }
+
 
 .card-has-bg {
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
@@ -271,7 +272,7 @@ a {
       background: linear-gradient(
         0deg,
         #000000 0%,
-        #fc3c6d4f 25%,
+        #f5625f76 25%,
         #8725fe00 100%
       );
     }
@@ -702,7 +703,7 @@ a {
   display: block;
   border: 0px;
   font-weight: 700;
-  box-shadow: 0px 0px 14px -7px #f09819;
+  /* box-shadow: 0px 0px 14px -7px #f09819; */
   /* background-image: linear-gradient(
     45deg,
     #F5615F 0%,
@@ -944,6 +945,8 @@ a {
 .multi-select-category .css-13cymwt-control,
 .multi-select-category .css-t3ipsp-control {
   width: 580px;
+  /* flex-grow: 1; */
+  /* display: flex; */
 }
 
 .custom-card {
@@ -1122,6 +1125,7 @@ a {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  /* max-width: 100px; */
   justify-content: center;
   text-align: center;
   /* font-size: 0.8rem;
