--- a/marbiz-frontend/src/App.css
+++ b/marbiz-frontend/src/App.css
@@ -236,7 +236,6 @@ a {
   }
 }
 
-
 .card-has-bg {
   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
   background-size: 125%;
@@ -287,7 +286,6 @@ a {
 .card-footer .media img {
   border: solid 3px rgba(255, 255, 255, 0.3);
 }
-
 
 .nav-btn {
   color: white;
@@ -403,7 +401,6 @@ a {
 .nav-item {
   width: 160px;
   text-align: center;
-
 }
 
 .nav-link {
@@ -502,7 +499,6 @@ a {
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
   box-shadow: 0 4px 15px 0 rgba(252, 104, 110, 0.75);
-
 }
 
 .section-heading {
@@ -796,12 +792,13 @@ a {
 .dark-bg {
   background-color: #292929;
   padding: 10px 15px;
-  border-top: 0px solid #6f42c1; /* Purple border */
-  border-bottom: 2px solid #6f42c1; /* Purple border */
-  border-left: 0px solid #6f42c1; /* Purple border */
-  border-right: 0px solid #6f42c1; /* Purple border */
+  border: 1px solid #333333;
+  /* border-top: 0px solid #6f42c1; */
+  /* border-bottom: 2px solid #6f42c1; 
+  border-left: 0px solid #6f42c1; 
+  border-right: 0px solid #6f42c1;  */
   color: #fff; /* White text color */
-  border-radius: 10px;
+  border-radius: 8px;
 }
 
 /* Placeholder text color */
@@ -811,10 +808,10 @@ a {
 
 /* Input focus styles */
 .dark-bg:focus {
-  border-color: #6f42c1; /* Purple border on focus */
+  border-color: #f5615f; 
   color: #fff; /* White text color on focus */
   background-color: rgb(29, 29, 29);
-  box-shadow: inset 0 0 0 0px #6f42c1;
+  box-shadow: inset 0 0 0 0px #f5615f;
 }
 
 .form-switch .form-check-input {
@@ -833,7 +830,7 @@ a {
 
 .inquiry-form {
   background-color: #28282b;
-  border: 2px solid #6f42c1;
+  border: 1px solid #fc396e;
 }
 
 .css-13cymwt-control {
@@ -850,7 +847,7 @@ a {
 }
 
 .css-13cymwt-control:hover {
-  background-color: #D9D9D929 !important;
+  background-color: #d9d9d929 !important;
 }
 
 .css-t3ipsp-control {
@@ -949,11 +946,19 @@ a {
 /* Default width for larger screens */
 .multi-select-category .css-13cymwt-control,
 .multi-select-category .css-t3ipsp-control {
-  width: 540px;
+  /* width: 540px; */
+  width: 100%;
   /* flex-grow: 1; */
   /* display: flex; */
 }
 
+.select__control .select__control--menu-is-open {
+  background-color: white !important;
+}
+
+.basic-multi-select {
+  /* width: 100vw; */
+}
 .custom-card {
   margin-right: 20px; /* Adjust the margin to control the spacing between cards */
 }
@@ -1058,8 +1063,8 @@ a {
   box-shadow: 0 4px 15px 0 rgba(252, 104, 110, 0.75);
 }
 
-
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
   /* width: 130px; */
   /* font-size: 16px; */
   /* font-weight: 300; */
@@ -1092,14 +1097,13 @@ a {
   font-size: 16px;
   border-bottom: 0;
   width: 130px;
-
 }
 
 .package-navigation .nav-item {
   /* width: 50%; */
   margin: 10px;
 }
-.package-navigation .nav-item a{
+.package-navigation .nav-item a {
   width: 100%;
   /* margin: 10px; */
 }
@@ -1107,7 +1111,6 @@ a {
 .package-card {
   border-radius: 20px;
 }
-
 
 /* mobile navigation */
 .bottom-nav {
@@ -1122,8 +1125,7 @@ a {
   /* will-change: transform; */
   /* transform: translateZ(0); */
   /* Specify your box shadow here */
-  border-top: 1px solid #FC396E;
-  
+  border-top: 1px solid #fc396e;
 }
 
 .bottom-nav-item {
@@ -1146,11 +1148,9 @@ a {
   align-items: center;
   font-weight: 600;
   padding: 0.8rem 0;
-
 }
 .bottom-nav-link:hover {
-  
-  color: #F5615F;
+  color: #f5615f;
 }
 
 .bottom-nav-item.active {
@@ -1170,7 +1170,6 @@ a {
 }
 .bottom-nav-item.active a {
   color: #ffffff; /* Specify your active link text color here */
-  
 }
 
 .css-1dimb5e-singleValue {
@@ -1179,4 +1178,26 @@ a {
 
 .infoCardHeading {
   font-size: 36px;
+}
+
+.text-divider {
+  margin: 1em 0;
+  line-height: 0;
+  text-align: center;
+}
+.text-divider span {
+  background-color: #000000;
+  padding: 5px 20px;
+  font-size: 30px;
+}
+.text-divider:before {
+  content: " ";
+  display: block;
+  border-top: 1px solid #474747;
+  border-bottom: 1px solid #474747;
+}
+
+.brand-btn {
+  width: 20vw;
+  font-size: 20px;
 }
