--- a/marbiz-frontend/src/responsive.css
+++ b/marbiz-frontend/src/responsive.css
@@ -56,6 +56,10 @@
     text-align: center;
     font-size: 30px;
   }
+
+  .brand-btn {
+    width: 55vw;
+  }
 }
 @media only screen and (max-width: 375px) {
   .bottom-nav-item {
